# Turing-Cortex-Agent-Protocol

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  plan.md  pyproject.toml
.github/actions/cortex-protocol-action/: action.yml
.github/workflows/: ci.yml  docker.yml  example-consumer.yml  release.yml
cortex_agent/: README.md  agent_schema.yaml  cli.py  parser.py
cortex_agent/generators/: generators.py
cortex_protocol/: __init__.py  ci.py  cli.py  compiler.py  differ.py  linter.py  model_families.py  models.py  platform.py  registry.py  validator.py
cortex_protocol/cloud/: __init__.py  audit_exporter.py  client.py  registry.py
cortex_protocol/governance/: __init__.py  approval.py  audit.py  audit_export.py  compliance.py  cost.py  drift.py  enforce.py  enforcer.py  evidence.py  exceptions.py  fleet.py  replay.py  signed_audit.py  templates.py
cortex_protocol/governance/adapters/: __init__.py  fastapi.py  langchain.py  langgraph.py  openai_agents.py
cortex_protocol/governance/dsl/: __init__.py  compiler.py  lexer.py  parser.py  runtime.py
cortex_protocol/governance/redaction/: __init__.py  engine.py  packs.py
cortex_protocol/licensing/: __init__.py  crypto.py  entitlements.py  gate.py  license.py  pubkey.py
cortex_protocol/mcp_server/: __init__.py  _sdk.py  config.py  install.py  prompts.py  resources.py  server.py  tools.py  transports.py
cortex_protocol/migrations/: __init__.py  v01_to_v03.py
cortex_protocol/network/: __init__.py  a2a.py  graph.py  mcp.py  models.py
cortex_protocol/registry/: __init__.py  local.py  marketplace.py  remote.py  resolver.py
cortex_protocol/simulate/: __init__.py  harness.py
cortex_protocol/simulate/scenarios/: exfiltration.yaml  prompt_injection.yaml
cortex_protocol/supply_chain/: __init__.py  manifest.py
cortex_protocol/targets/: __init__.py  base.py  claude_sdk.py  crewai.py  langgraph.py  openai_sdk.py  semantic_kernel.py  system_prompt.py
examples/: incident_commander.yaml  support_agent.yaml
packaging/homebrew/: cortex-protocol.rb
packaging/npm/: README.md  package.json
tests/: conftest.py  test_adapters.py  test_approval.py  test_audit.py  test_audit_rotation.py  test_ci.py  test_cli_mcp.py  test_cli_quickstart.py  test_cloud_audit_exporter.py  test_cloud_client.py  test_cloud_registry.py  test_compiler.py  test_compliance.py  test_compliance_controls.py  test_cost.py  test_differ.py  test_drift.py  test_dsl.py  test_enforcement_patterns.py  test_enforcer.py  test_evidence.py  test_extends.py  test_fleet.py  test_inheritance_depth.py  test_licensing.py  test_linter.py  test_local_registry.py  test_marketplace.py  test_mcp.py  test_mcp_server.py  test_migrations.py  test_models.py  test_network.py  test_platform.py  test_policy_templates.py  test_redaction.py  test_registry.py  test_remote_registry.py  test_replay.py  test_resolver.py  (+4 more)
tests/fixtures/: basic_agent.yaml  policy_agent.yaml
tests/test_targets/: test_claude_sdk.py  test_crewai.py  test_langgraph.py  test_openai_sdk.py  test_semantic_kernel.py  test_system_prompt.py
