[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-protocol"
version = "0.1.0"
description = "Portable agent specification — define once, compile to any runtime"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Phani Marupaka", email = "phani@cortexprotocol.dev"},
]
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
cortex-protocol = "cortex_protocol.cli:main"

[tool.setuptools.packages.find]
include = ["cortex_protocol*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
